[package]
name = "tonic_catch"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "catch any tonic await error convert into Status"
repository = "https://github.com/rmw-lib/tonic_catch"

[dependencies]
anyhow = "1.0.71"
tonic = "0.9.2"
tonic_catch_proc = { path = "./proc", version = "0.1.2" }
