[package]
name = "tonic_catch_proc"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "catch any tonic await error convert into Status"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.14"
syn = { version = "1.0.85", features = ["full", "visit-mut"] }

