[package]
name = "tonic_catch_proc"
repository = "https://github.com/rmw-lib/tonic_catch"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "catch any tonic await error convert into Status"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.59"
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full", "visit-mut"] }

